--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-database:15.0.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.tomer:fadingtextview:2.5'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.android.support:customtabs:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
