--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.tomer:fadingtextview:2.5'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
